[package]
name = "onething"
version = "0.1.0"
authors = ["Adam Chalmers <adam.s.chalmers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-http = "1"
actix-rt = "1.1.1"
actix-service = "1.0"
actix-web = { version="2.0.0", features=["openssl"] }
actix-web-httpauth = "0.4.1"
anyhow = "1.0"
async-trait = "0.1"
awc = "1.0.1"
base64 = "0.11"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.5", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
diesel-derive-enum = { version = "1.0", features = ["postgres"] }
digest = "0.9.0"
futures = "0.3"
guard = "0.5.0"
hex = "0.4.2"
jsonwebtoken = "7"
lazy_static = "1.4.0"
nom = "5.1.2"
prometheus = { version = "0.9", features = ["process"] }
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
serde_qs = "0.6"
sha2 = "0.9.0"
structopt = "0.3.15"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["json"] }
url = "2.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
